// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> Should no render empty component when data is not empty: Not render emptyComponent when data is not empty 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-68x580"
    >
      <table
        class="chakra-table css-y9vv58"
        data-testid="table-table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-1vlzcm"
          >
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Name
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Dlt address
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Amount
                </div>
              </div>
            </th>
            <th
              class="css-134mxz3"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  -
                </div>
              </div>
            </th>
          </tr>
          <tr
            class="css-9r9j6k"
            data-testid="row-0"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                Name 1
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                12345
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                23
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                +
              </div>
            </td>
          </tr>
          <tr
            class="css-9r9j6k"
            data-testid="row-1"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                Name 2
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                54321
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                53
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                +
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Table /> Should no render empty component when isLoading is true: Not render emptyComponent when isLoading is true 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-68x580"
    >
      <table
        class="chakra-table css-y9vv58"
        data-testid="table-table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-1vlzcm"
          >
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Name
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Dlt address
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Amount
                </div>
              </div>
            </th>
            <th
              class="css-134mxz3"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  -
                </div>
              </div>
            </th>
          </tr>
          <tr
            class="css-1riuaxs"
            data-testid="row-0"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Table /> Should render empty component: Using emptyComponent 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-68x580"
    >
      <table
        class="chakra-table css-y9vv58"
        data-testid="table-table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-1vlzcm"
          >
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Name
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Dlt address
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Amount
                </div>
              </div>
            </th>
            <th
              class="css-134mxz3"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  -
                </div>
              </div>
            </th>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="css-yzvkd8"
    >
      <div>
        Empty
      </div>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Table /> renders correctly 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-68x580"
    >
      <table
        class="chakra-table css-y9vv58"
        data-testid="table-table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-1vlzcm"
          >
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Name
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Dlt address
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Amount
                </div>
              </div>
            </th>
            <th
              class="css-134mxz3"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  -
                </div>
              </div>
            </th>
          </tr>
          <tr
            class="css-9r9j6k"
            data-testid="row-0"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                Name 1
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                12345
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                23
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                +
              </div>
            </td>
          </tr>
          <tr
            class="css-9r9j6k"
            data-testid="row-1"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                Name 2
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                54321
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                53
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                +
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Table /> renders correctly with isLoading: Using isLoading 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-68x580"
    >
      <table
        class="chakra-table css-y9vv58"
        data-testid="table-table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-1vlzcm"
          >
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Name
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Dlt address
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Amount
                </div>
              </div>
            </th>
            <th
              class="css-134mxz3"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  -
                </div>
              </div>
            </th>
          </tr>
          <tr
            class="css-1riuaxs"
            data-testid="row-0"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                <div
                  class="chakra-skeleton css-yixgko"
                />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`<Table /> renders correctly with simple variant: Using simple variant 1`] = `
<DocumentFragment>
  <div
    class="css-0"
  >
    <div
      class="css-68x580"
    >
      <table
        class="chakra-table css-y9vv58"
        data-testid="table-table"
      >
        <tbody
          class="css-0"
        >
          <tr
            class="css-1vlzcm"
          >
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Name
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Dlt address
                </div>
              </div>
            </th>
            <th
              class="css-45nzd6"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  Amount
                </div>
              </div>
            </th>
            <th
              class="css-134mxz3"
            >
              <div
                class="css-1lekzkb"
              >
                <div
                  class="css-zvlevn"
                >
                  -
                </div>
              </div>
            </th>
          </tr>
          <tr
            class="css-9r9j6k"
            data-testid="row-0"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                Name 1
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                12345
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                23
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                +
              </div>
            </td>
          </tr>
          <tr
            class="css-9r9j6k"
            data-testid="row-1"
          >
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                Name 2
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                54321
              </div>
            </td>
            <td
              class="css-9k00pq"
            >
              <div
                class="css-zvlevn"
              >
                53
              </div>
            </td>
            <td
              class="css-1wo9kev"
            >
              <div
                class="css-zvlevn"
              >
                +
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
